--- a/VideoClubNO/Base.lproj/Main.storyboard
+++ b/VideoClubNO/Base.lproj/Main.storyboard
@@ -1,24 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V7X-gt-HCx">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="2an-eF-Ptr">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="V7X-gt-HCx" customClass="ViewController" customModule="VideoClubNO" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="m7H-ZH-oaS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="videoCellIdentifier" rowHeight="117" id="HjM-Pu-abo" customClass="VideoItemCell" customModule="VideoClubNO" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="117"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HjM-Pu-abo" id="LMw-wD-NjT">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="117"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ohq-LF-84J" customClass="UIImageViewURL" customModule="VideoClubNO" customModuleProvider="target">
+                                            <rect key="frame" x="5" y="5" width="130" height="107"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="130" id="GBK-QZ-xBR"/>
+                                            </constraints>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v7l-NI-Cqg">
+                                            <rect key="frame" x="138" y="5" width="271" height="107"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAc-Ot-Vgv">
+                                                    <rect key="frame" x="112.5" y="5" width="46" height="23"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="LabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabel" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbb-pz-NER" userLabel="description">
+                                                    <rect key="frame" x="5" y="33" width="261" height="69"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstItem="pbb-pz-NER" firstAttribute="leading" secondItem="v7l-NI-Cqg" secondAttribute="leading" constant="5" id="Ke7-HR-Iug"/>
+                                                <constraint firstAttribute="bottom" secondItem="pbb-pz-NER" secondAttribute="bottom" constant="5" id="Rnj-by-wGp"/>
+                                                <constraint firstItem="GAc-Ot-Vgv" firstAttribute="centerX" secondItem="v7l-NI-Cqg" secondAttribute="centerX" id="aSw-O0-h8W"/>
+                                                <constraint firstItem="pbb-pz-NER" firstAttribute="top" secondItem="GAc-Ot-Vgv" secondAttribute="bottom" constant="5" id="abE-SJ-taV"/>
+                                                <constraint firstAttribute="trailing" secondItem="pbb-pz-NER" secondAttribute="trailing" constant="5" id="eFn-Bu-Trb"/>
+                                                <constraint firstItem="GAc-Ot-Vgv" firstAttribute="top" secondItem="v7l-NI-Cqg" secondAttribute="top" constant="5" id="sjf-QR-bCK"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="v7l-NI-Cqg" secondAttribute="trailing" constant="5" id="0EO-Rn-Zj5"/>
+                                        <constraint firstItem="v7l-NI-Cqg" firstAttribute="bottom" secondItem="LMw-wD-NjT" secondAttribute="bottom" constant="-5" id="4jV-R2-J1M"/>
+                                        <constraint firstItem="Ohq-LF-84J" firstAttribute="leading" secondItem="LMw-wD-NjT" secondAttribute="leading" constant="5" id="Fqv-7h-fjH"/>
+                                        <constraint firstItem="Ohq-LF-84J" firstAttribute="top" secondItem="LMw-wD-NjT" secondAttribute="top" constant="5" id="Hv6-MS-6UT"/>
+                                        <constraint firstItem="v7l-NI-Cqg" firstAttribute="leading" secondItem="Ohq-LF-84J" secondAttribute="trailing" constant="3" id="V1q-RJ-Tkt"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ohq-LF-84J" secondAttribute="bottom" constant="5" id="bR1-QE-fpG"/>
+                                        <constraint firstItem="v7l-NI-Cqg" firstAttribute="top" secondItem="LMw-wD-NjT" secondAttribute="top" constant="5" id="fw6-cN-EaQ"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="pbb-pz-NER" id="PtB-hx-6z2"/>
+                                    <outlet property="thumbNail" destination="Ohq-LF-84J" id="hvS-4a-Mz2"/>
+                                    <outlet property="titleLabel" destination="GAc-Ot-Vgv" id="FjW-CG-MkF"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="V7X-gt-HCx" id="U9P-hn-doF"/>
+                            <outlet property="delegate" destination="V7X-gt-HCx" id="zIG-Vg-RfZ"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="D0k-qb-NRw"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HjE-oi-4tt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="389.85507246376812" y="0.0"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
